# solana_lab

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  id.json  metadata_initialization_command.txt  mntrBoi14K4bn4QqT9pHicv3EKqvxCT4y9mS7YfJkDh.json  pyproject.toml  rec5LKDkceRinpoJwk7RbNnSPwkVXvYhFb2KP1jj96E.json  useful_commands.txt
counter/: Anchor.toml
counter/programs/counter/src/: lib.rs
counter/scripts/: counter_client.ts
my_dex/: Anchor.toml  package-lock.json
my_dex/programs/my_dex/: Cargo.toml
my_dex/programs/my_dex/src/: lib.rs
my_dex/scripts/: dex_client.ts
my_dex/tests/: my_dex.ts
scripts/: airdrop.py  close_token_account.py  common.py  counter_client.py  create_wallet.py  drain_wallet.py  price_report.py  swap-info.json  transfer.py
scripts/raydium-sdk-V2-demo/: package.json
scripts/raydium-sdk-V2-demo/src/: config.ts
scripts/raydium-sdk-V2-demo/src/cpmm/: createCpmmPool.ts  swap.ts
