[project]
name = "solana-lab"
version = "0.1.0"
description = ""
authors = [
    {name = "Henadzi Khviasko",email = "henadzi.khviasko@pynest.io"}
]
requires-python = ">=3.12,<4"
dependencies = [
    "solana (>=0.36.9,<0.37.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false